--- a/styles.css
+++ b/styles.css
@@ -1,585 +1,1 @@
-/* CSS with media queries for responsiveness */
-
-/* Base styles */
-body,
-html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: cursive;
-  background: radial-gradient(circle, #17a8a3, #000000);
-}
-
-
-
-/* Container styles */
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  padding: 20px;
-}
-
-/* Header styles */
-header {
-  width: 100%;
-  padding: 15px 0;
-  background-color: radial-gradient(circle, #17a8a3, #000000);
-  color: #fff;
-  text-align: left;
-  font-size: 15px;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.logo-container {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-
-.logo {
-  width: 50px;
-  /* Adjust the size as needed */
-  height: auto;
-  animation: logoAnimation 1s ease-in-out;
-}
-
-@keyframes logoAnimation {
-  0% {
-    transform: scale(0);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-/* Header title animation */
-header h1 {
-  margin: 0;
-  animation: slideInLeft 1.5s ease-in-out;
-}
-
-@keyframes slideInLeft {
-  0% {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-/* Styles for the tile grid */
-.game-container {
-  display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: repeat(3, 100px);
-  gap: 15px;
-}
-
-.tile {
-  width: 100px;
-  height: 100px;
-  background-color: #fff;
-  border: 1px solid #dcdde1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  cursor: pointer;
-  transition: transform 0.5s ease, background-color 0.3s ease, box-shadow 0.3s ease, transform 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  perspective: 1000px;
-  transition: .6sec;
-  box-shadow: 0px 0px 60px #1f4c65;
-  -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4));
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeInUp 1.5s forwards;
-}
-
-@keyframes fadeInUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.tile:hover {
-  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
-  transform: translateY(-5px);
-}
-
-.tile.flipped {
-  background-color: #4aafce;
-  transform: rotateY(180deg);
-}
-
-.tile-content {
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
-}
-
-.tile-front,
-.tile-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  border: 1px solid #dcdde1;
-}
-
-.tile-back {
-  transform: rotateY(180deg);
-}
-
-/* "Play Again" button styles */
-#play-again {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  background-color: rgb(0, 0, 0);
-  color: white;
-  border: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-  -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4));
-  animation: fadeInUp 1.5s 0.3s forwards;
-  /* Delayed animation */
-  opacity: 0;
-  transform: translateY(20px);
-}
-
-#play-again:hover {
-  background: rgb(2, 29, 78);
-  background: linear-gradient(270deg, rgba(2, 29, 78, 0.681) 0%, rgba(31, 215, 232, 0.873) 60%);
-  color: rgb(4, 4, 38);
-}
-
-.play-again:active {
-  scale: 0.92;
-}
-
-/* Wallet box styles */
-.wallet-box {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 10px;
-  background-color: rgb(0, 0, 0);
-  color: #fff;
-  border-radius: 5px;
-
-}
-
-
-/* Withdraw button styles */
-#withdraw {
-  margin-top: 10px;
-}
-
-/* About button styles */
-.about-button {
-  margin-top: 10px;
-}
-
-/* Button styles */
-.btn {
-  font-size: .75rem;
-  padding: .5rem .5rem;
-  margin-bottom: 10px;
-  border: none;
-  outline: none;
-  border-radius: 0.4rem;
-  cursor: pointer;
-  text-transform: uppercase;
-  background-color: rgb(0, 0, 0);
-  color: rgb(234, 234, 234);
-  font-weight: 700;
-  transition: 0.6s;
-  box-shadow: 0px 0px 60px #1f4c65;
-
-}
-
-.btn:active {
-  scale: 0.92;
-}
-
-.btn:hover {
-  background: rgb(2, 29, 78);
-  background: linear-gradient(270deg, rgba(2, 29, 78, 0.681) 0%, rgba(31, 215, 232, 0.873) 60%);
-  color: rgb(4, 4, 38);
-}
-
-/* Media queries for responsiveness */
-
-/* Media query for smaller screens */
-@media (max-width: 600px) {
-  .game-container {
-    grid-template-columns: repeat(3, 80px);
-    grid-template-rows: repeat(3, 80px);
-  }
-
-  .tile {
-    width: 80px;
-    height: 80px;
-    font-size: 16px;
-  }
-
-  /* Adjustments for smaller screens */
-  .btn {
-    font-size: .5rem;
-    padding: 15px 0;
-  }
-}
-
-/* Hamburger menu styles */
-.hamburger-menu {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
-
-.menu-items {
-  display: none;
-  position: absolute;
-  top: calc(100% + 10px);
-  /* Adjust vertical position as needed */
-  left: 0;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-  z-index: 998;
-  /* Ensure the menu is below the hamburger icon */
-  opacity: 0;
-  transform: translateY(-20px);
-  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.9s;
-}
-
-.menu-items.active {
-  display: block;
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.menu-column {
-  float: right;
-  width: 100%;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-/* Hamburger icon styles */
-.hamburger-icon {
-  cursor: pointer;
-  background: none;
-  border: none;
-  padding: 10;
-}
-
-.hamburger-icon span {
-  display: block;
-  width: 25px;
-  height: 3px;
-  background-color: #ffffff;
-  margin: 5px;
-  transition: transform 0.3s ease;
-}
-
-/*icon animation*/
-.hamburger-icon.active span:nth-child(1) {
-  transform: translateY(8px) rotate(45deg);
-}
-
-.hamburger-icon.active span:nth-child(2) {
-  opacity: 0;
-}
-
-.hamburger-icon.active span:nth-child(3) {
-  transform: translateY(-8px) rotate(-45deg);
-}
-
-/* Help button styles */
-.help-button {
-  position: absolute;
-  top: 60px;
-  right: 10px;
-  background-color: rgb(0, 0, 0);
-  color: white;
-  border: none;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.help-button:hover {
-  background: rgb(2, 29, 78);
-  background: linear-gradient(270deg, rgba(2, 29, 78, 0.681) 0%, rgba(31, 215, 232, 0.873) 60%);
-  color: rgb(4, 4, 38);
-  transform: scale(1.1);
-}
-
-/* Modal styles */
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 1;
-  /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0);
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
-  animation: fadeIn 0.5s;
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  /* Could be more or less, depending on screen size */
-  animation: slideInUp 0.5s;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes slideInUp {
-  from {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* Page buttons */
-.next-button,
-.prev-button,
-.finish-button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: rgb(14, 14, 26);
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.next-button:hover,
-.prev-button:hover,
-.finish-button:hover {
-  background: rgb(2, 29, 78);
-  background: linear-gradient(270deg, rgba(2, 29, 78, 0.681) 0%, rgba(31, 215, 232, 0.873) 60%);
-  color: rgb(4, 4, 38);
-  transform: scale(1.05);
-}
-
-footer {
-  background-color: radial-gradient(circle, #17a8a3, #000000);
-  ;
-  padding: 10px 0;
-  text-align: center;
-  margin-top: 200px;
-}
-
-.footer-content {
-  max-width: 800px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.footer-content p {
-  margin: 0;
-}
-
-.social-links {
-  display: flex;
-  gap: 10px;
-  margin-top: 10px;
-
-}
-
-.social-icon {
-  width: 24px;
-  height: 24px;
-  transition: transform 0.3s ease;
-}
-
-.social-icon:hover {
-  transform: scale(1.2);
-}
-
-/* Media query for larger screens */
-@media (min-width: 1024px) {
-  .game-container {
-    grid-template-columns: repeat(3, 120px);
-    grid-template-rows: repeat(3, 120px);
-  }
-
-  .tile {
-    width: 120px;
-    height: 120px;
-    font-size: 20px;
-  }
-
-  .btn {
-    font-size: 1rem;
-    padding: 20px;
-  }
-}
-
-/* Animations for various elements */
-@keyframes pop {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.1);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-.tile-content {
-  animation: pop 0.6s ease-in-out infinite alternate;
-}
-
-.help-button {
-  animation: bounce 2s infinite;
-}
-
-@keyframes bounce {
-
-  0%,
-  20%,
-  50%,
-  80%,
-  100% {
-    transform: translateY(0);
-  }
-
-  40% {
-    transform: translateY(-10px);
-  }
-
-  60% {
-    transform: translateY(-5px);
-  }
-}
-
-/* Smooth transitions */
-body {
-  transition: background 0.5s ease;
-}
-
-.container {
-  transition: transform 0.5s ease;
-}
-
-footer {
-  transition: background 0.5s ease;
-}
-
-.btn {
-  transition: all 0.3s ease;
-}
-
-.tile {
-  transition: all 0.3s ease;
-}
-
-.hamburger-icon span {
-  transition: all 0.3s ease;
-}
-
-/* Complete the visual enhancement */
-header {
-  animation: slideInDown 1s ease;
-}
-
-.footer-content p {
-  animation: fadeIn 1s ease 0.5s forwards;
-  opacity: 0;
-}
-
-.social-links {
-  animation: fadeIn 1s ease 0.5s forwards;
-  opacity: 0;
-}
-
-/* Ensuring responsiveness and visual consistency */
-@media (max-width: 768px) {
-  .game-container {
-    grid-template-columns: repeat(3, 90px);
-    grid-template-rows: repeat(3, 90px);
-  }
-
-  .tile {
-    width: 90px;
-    height: 90px;
-    font-size: 16px;
-  }
-
-  .btn {
-    font-size: 0.8rem;
-    padding: 15px;
-  }
-}
+#play-again,.tile{-webkit-box-reflect:below 10px linear-gradient(to bottom,rgba(0,0,0,0.0),rgba(0,0,0,0.4));transform:translateY(20px);opacity:0}.btn,.tile{cursor:pointer;box-shadow:0 0 60px #1f4c65}.help-button,.wallet-box{right:10px;position:absolute}.btn,.close,header{font-weight:700}footer,header{background-color:radial-gradient(circle,#17a8a3,#000)}body,footer{transition:background .5s}body,html{margin:0;padding:0;height:100%;font-family:cursive;background:radial-gradient(circle,#17a8a3,#000)}.container{display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;padding:20px}.tile,header{justify-content:center}header{width:100%;padding:15px 0;color:#fff;text-align:left;font-size:15px;display:flex;align-items:center;animation:1s slideInDown}.logo-container{display:flex;align-items:center;gap:15px}.logo{width:50px;height:auto;animation:1s ease-in-out logoAnimation}@keyframes logoAnimation{0%{transform:scale(0)}100%{transform:scale(1)}}header h1{margin:0;animation:1.5s ease-in-out slideInLeft}@keyframes slideInLeft{0%{transform:translateX(-100%);opacity:0}100%{transform:translateX(0);opacity:1}}.game-container{display:grid;grid-template-columns:repeat(3,100px);grid-template-rows:repeat(3,100px);gap:15px}.tile,.tile-back,.tile-front{display:flex;background-color:#fff;border:1px solid #dcdde1}.tile{width:100px;height:100px;align-items:center;font-size:18px;perspective:1000px;animation:1.5s forwards fadeInUp}@keyframes fadeInUp{to{opacity:1;transform:translateY(0)}}.tile:hover{box-shadow:0 12px 20px rgba(0,0,0,.3);transform:translateY(-5px)}.tile.flipped{background-color:#000;transform:rotateY(180deg)}.tile-content{transform-style:preserve-3d;backface-visibility:hidden}.tile-back,.tile-front{position:absolute;width:100%;height:100%;justify-content:center;align-items:center}#play-again,.btn,.wallet-box{background-color:#000}.tile-back{transform:rotateY(180deg)}#play-again{margin-top:20px;padding:10px 20px;font-size:16px;cursor:pointer;color:#fff;border:none;border-radius:5px;transition:background-color .3s;animation:1.5s .3s forwards fadeInUp}#play-again:hover,.btn:hover{background:#021d4e;background:linear-gradient(270deg,rgba(2,29,78,.681) 0,rgba(31,215,232,.873) 60%);color:#040426}.btn:active,.play-again:active{scale:0.92}.wallet-box{top:10px;padding:10px;color:#fff;border-radius:5px}#withdraw,.about-button{margin-top:10px}.btn{font-size:.75rem;padding:.5rem;margin-bottom:10px;border:none;outline:0;border-radius:.4rem;text-transform:uppercase;color:#eaeaea}@media (max-width:600px){.game-container{grid-template-columns:repeat(3,80px);grid-template-rows:repeat(3,80px)}.tile{width:80px;height:80px;font-size:16px}.btn{font-size:.5rem;padding:15px 0}}.hamburger-menu{position:absolute;top:10px;left:10px}.menu-items,.modal{left:0;display:none}.menu-items{position:absolute;top:calc(100% + 10px);background-color:#fff;box-shadow:0 2px 4px rgba(0,0,0,.1);border-radius:4px;z-index:998;opacity:0;transform:translateY(-20px);transition:opacity .3s,transform .3s,visibility .9s}.finish-button,.help-button,.next-button,.prev-button{cursor:pointer;transition:background-color .3s,transform .3s}.menu-items.active{display:block;opacity:1;transform:translateY(0)}.menu-column{float:right;width:100%;padding:10px;box-sizing:border-box}.hamburger-icon{cursor:pointer;background:0 0;border:none;padding:10}.hamburger-icon span{display:block;width:25px;height:3px;background-color:#fff;margin:5px}.hamburger-icon.active span:first-child{transform:translateY(8px) rotate(45deg)}.auth-button:active img,.auth-button:focus img,.auth-button:hover img,.hamburger-icon.active span:nth-child(2){opacity:0}.hamburger-icon.active span:nth-child(3){transform:translateY(-8px) rotate(-45deg)}.help-button{top:60px;background-color:#000;color:#fff;border:none;border-radius:50%;width:50px;height:50px;font-size:24px;text-align:center}.help-button:hover{background:#021d4e;background:linear-gradient(270deg,rgba(2,29,78,.681) 0,rgba(31,215,232,.873) 60%);color:#040426;transform:scale(1.1)}.modal{position:fixed;z-index:1;top:0;width:100%;height:100%;overflow:auto;background-color:rgba(0,0,0,.4);animation:.5s fadeIn}.modal-content{background-color:#fefefe;margin:15% auto;padding:20px;border:1px solid #888;width:80%;animation:.5s slideInUp}@keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes slideInUp{from{transform:translateY(100%);opacity:0}to{transform:translateY(0);opacity:1}}.close{color:#aaa;float:right;font-size:28px}.close:focus,.close:hover{color:#000;text-decoration:none;cursor:pointer}.finish-button,.next-button,.prev-button{margin-top:20px;padding:10px 20px;background-color:#0e0e1a;color:#fff;border:none;border-radius:5px}.finish-button:hover,.next-button:hover,.prev-button:hover{background:#021d4e;background:linear-gradient(270deg,rgba(2,29,78,.681) 0,rgba(31,215,232,.873) 60%);color:#040426;transform:scale(1.05)}footer{padding:10px 0;text-align:center;margin-top:200px}.footer-content{max-width:800px;margin:0 auto;display:flex;flex-direction:column;align-items:center}.footer-content p{margin:0}.social-links{display:flex;gap:10px;margin-top:10px}.social-icon{width:24px;height:24px;transition:transform .3s}.social-icon:hover{transform:scale(1.2)}@media (min-width:1024px){.game-container{grid-template-columns:repeat(3,120px);grid-template-rows:repeat(3,120px)}.tile{width:120px;height:120px;font-size:20px}.btn{font-size:1rem;padding:20px}}@keyframes pop{0%,100%{transform:scale(1)}50%{transform:scale(1.1)}}.tile-content{animation:.6s ease-in-out infinite alternate pop}.help-button{animation:2s infinite bounce}@keyframes bounce{0%,100%,20%,50%,80%{transform:translateY(0)}40%{transform:translateY(-10px)}60%{transform:translateY(-5px)}}.container{transition:transform .5s}.btn,.hamburger-icon span,.tile{transition:.3s}.auth-button img,.auth-button::after{transition:opacity .2s ease-in-out}.footer-content p,.social-links{animation:1s .5s forwards fadeIn;opacity:0}@media (max-width:768px){.game-container{grid-template-columns:repeat(3,90px);grid-template-rows:repeat(3,90px)}.tile{width:90px;height:90px;font-size:16px}.btn{font-size:.8rem;padding:15px}}.btn img{width:30px;height:30px;margin-right:10px}.auth-button::after{content:attr(data-text);position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);opacity:0;white-space:nowrap}.auth-button:active::after,.auth-button:focus::after,.auth-button:hover::after{opacity:1}#animation-container{display:none}#animation-container.animate{display:block}
